# VillageGame

./: CMakeLists.txt  main.cpp
include/: Application.h  AssetHandler.h  AssetManager.h  AssetTypes.h  Config.h  Entity.h  EntityTypes.h  Property.h  PropertyManager.h  State.h  StateManager.h  System.h
include/states/: MainMenuState.h  SplashScreenState.h
include/templates/: TAsset.h  TAssetHandler.h
src/: Application.cpp  AssetHandler.cpp  AssetManager.cpp  Entity.cpp  Property.cpp  PropertyManager.cpp  State.cpp  StateManager.cpp  System.cpp
src/states/: MainMenuState.cpp  SplashScreenState.cpp
